operator/pkg/gateway-api/testdata/gateway/listenerset-tls-protocol-conflict/output/listenerset-tls-protocol-conflict.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: tls-protocol-conflict
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: tls-protocol-conflict
  listeners:
    - name: tls
      hostname: tls.example.com
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: Same
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Programmed
  listeners:
    - name: tls
      attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: ProtocolConflict
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: ProtocolConflict
          status: "False"
          type: Programmed
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener has a conflict
          reason: ProtocolConflict
          status: "True"
          type: Conflicted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
